[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
optuna = "^3.1.1"
omegaconf = "^2.3.0"
jinja2 = "^3.1.2"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp311-cp311-linux_x86_64.whl"}
notebook = "^6.5.4"
pytorch-lightning = "^2.0.6"
wandb = "^0.15.7"
scikit-learn = "^1.3.0"
tensorboard = "^2.18.0"
fastdtw = "^0.3.4"
folium = "^0.18.0"
openai = "^1.54.1"
transformers = "^4.46.3"
peft = "^0.13.2"
tiktoken = "^0.8.0"
blobfile = "^3.0.0"
sentencepiece = "^0.2.0"
bitsandbytes = "^0.44.1"
pylcs = "^0.1.1"
shapely = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
